# libweb

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  handler.c  handler.h  html.c  html.h  http.c  http.h  libweb.pc  server.c  server.h  slweb.pc  wildcard_cmp.c  wildcard_cmp.h
cmake/: Finddynstr.cmake
doc/: CMakeLists.txt  Makefile
doc/man3/: Makefile  handler_add.3  handler_alloc.3  handler_free.3  handler_listen.3  handler_loop.3  html_node_add_attr.3  html_node_add_child.3  html_node_add_sibling.3  html_node_alloc.3  html_node_free.3  html_node_set_value.3  html_node_set_value_unescaped.3  html_serialize.3  http_alloc.3  http_cookie_create.3  http_decode_url.3  http_encode_url.3  http_free.3  http_response_add_header.3  http_update.3
doc/man7/: Makefile  libweb_handler.7  libweb_html.7  libweb_http.7  slweb_handler.7  slweb_html.7  slweb_http.7
examples/: CMakeLists.txt  Makefile
examples/headers/: CMakeLists.txt  Makefile  README.md  main.c
examples/hello/: CMakeLists.txt  Makefile  README.md  main.c
examples/html/: CMakeLists.txt  Makefile  README.md  main.c
examples/put/: CMakeLists.txt  Makefile  README.md  main.c
include/libweb/: handler.h  http.h  server.h
include/slweb/: handler.h  http.h  wildcard_cmp.h
